# tinyexpr

./: CMakeLists.txt  README.md  benchmark.c  example.c  example2.c  example3.c  fuzz.c  minctest.h  repl.c  smoke.c  tinyexpr.c  tinyexpr.h
.github/workflows/: cmake-build.yml  cpp-build.yml  fuzz.yml
